src/objects/zkmulti__Shipment_Field__c.object
<CustomObject>
    <fields>
        <fullName>zkmulti__Carrier_Name__c</fullName>
        <label>Carrier Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Currency__c</fullName>
        <label>Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>zkmulti__Date_Time__c</fullName>
        <label>Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>zkmulti__Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zkmulti__Number__c</fullName>
        <label>Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkmulti__Object_Name__c</fullName>
        <label>Object Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Shipment__c</fullName>
        <label>Shipment</label>
        <referenceTo>zkmulti__MCShipment__c</referenceTo>
        <relationshipLabel>Shipment Fields</relationshipLabel>
        <relationshipName>Shipment_Fields</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>zkmulti__Slug__c</fullName>
        <label>Slug</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Text_Area__c</fullName>
        <label>Text Area</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zkmulti__Text__c</fullName>
        <label>Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Shipment Field</label>
    <nameField>
        <label>Shipment Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shipment Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>